--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 
 body {
-    background-color:#000001;
+    background-color:#CCA9DD;
     color:#464646;
     font-family: 'Poppins', sans-serif;
     font-size:11px;
@@ -259,7 +259,7 @@ p {
 .side-text {
     border-radius:10px;
     box-shadow:0px 0px 5px rgba(78, 78, 78, 0.1);
-    border:1px solid #000001;
+    border:1px solid #464646;
     overflow:hidden;
     margin-bottom:10px;
 }
