--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ p {
     bottom:0px;
     width:100vw;
     height:40vh;
-    background-color:#000001;
+    background-color:#CCA9DD;
 }
 
 .container {
