--- a/style.css
+++ b/style.css
@@ -384,13 +384,13 @@ img.tumblr_avatar {
 }
 
 .art-image {
-  margin-top: 110px;
+  margin-top: 900px;
   text-align: center;
 }
 
 .art-image img {
-  max-width: 30%;
-  height: auto;
+  max-width: 25%;
+  height: 300px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
