--- a/style.css
+++ b/style.css
@@ -384,13 +384,16 @@ img.tumblr_avatar {
 }
 
 .art-image {
-  margin-top: 1100px;
   text-align: center;
+  margin-top: 40px;
+  padding: 10px;
+  z-index: 1;
+  position: relative;
 }
 
 .art-image img {
   max-width: 15%;
-  height: 1500px;
+  height: auto;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
