--- a/style.css
+++ b/style.css
@@ -385,15 +385,14 @@ img.tumblr_avatar {
 
 .art-image {
   position: absolute;
-  bottom: 5px; /* 👈 controla qué tan arriba o abajo */
+  top: 72%; /* 👈 Esto define qué tan abajo va, puedes ajustar */
   left: 50%;
   transform: translateX(-50%);
-  z-index: 5;
-  text-align: center;
+  z-index: 3;
 }
 
 .art-image img {
-  max-width: 20vw;
+  max-width: 80vw;
   height: auto;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
